Update index.html by changing the name of script source from index.js to dicee.js

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <footer>
   Forked from www 🎲 App Brewery 🎲 com<br>
   © Copyright 2022 Ahmad Fauzan Bagaskoro
-  <script src="index.js" charset="utf-8"></script>
+  <script src="dicee.js" charset="utf-8"></script>
 </footer>
 
 </html>
