--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 <footer>
   Forked from www 🎲 App Brewery 🎲 com<br>
-  © Copyright 2022 Ahmad Fauzan Bagaskoro
+  © 2022 Ahmad Fauzan Bagaskoro
   <script src="dicee.js" charset="utf-8"></script>
 </footer>
 
